<resources>
    <string name="app_name">Music App</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_the_password">Forgot the password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email_to_receive_otp">Enter your email to receive OTP:</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="otp_has_been_sent_to">OTP has been sent to</string>
    <string name="create_new_password">Create new password</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="enter_otp">Enter OTP</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="category">Category</string>
    <string name="see_all">See all</string>
    <string name="list_songs">List Songs</string>
    <string name="singer">Singer</string>
    <string name="song">Song</string>
    <string name="all">All</string>
    <string name="songs">Songs</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update">Update</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="code_has_been_send_to">Code has been send to</string>
    <string name="continuee">Continue</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="click_here">Click here</string>
    <string name="send">Send</string>
</resources>