<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authen.RegisterFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/create_your_account"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:text="Abc123"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">


        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:text="Hello world"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:text="abc123@gmail.com"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:text="Abc123@"/>

        <CheckBox
            android:id="@+id/checkbox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_password"
            android:button="@null"
            android:checked="false"
            android:scaleX="0.60"
            android:scaleY="0.60" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">


        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:text="Abc123@"/>

        <CheckBox
            android:id="@+id/checkbox_retype_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_password"
            android:button="@null"
            android:checked="false"
            android:scaleX="0.60"
            android:scaleY="0.60" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkbox_remember_new_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green_500"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/green_500"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>