<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authen.ForgotPasswordMethodFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="6dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/forgot_password"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="346dp"
            android:layout_height="268dp"
            android:layout_gravity="center"
            android:padding="30dp"
            android:src="@drawable/forgot_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/enter_your_email_to_receive_otp"
            android:fontFamily="@font/urbanist_semi_bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50sp"
            android:focusable="true"
            android:hint="@string/email"
            android:paddingHorizontal="8dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/verify"
            android:fontFamily="@font/urbanist_bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>