<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authen.EnterOtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="6dp"
            android:text="@string/create_new_password"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="90dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/code_has_been_send_to"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <com.mukeshsolanki.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:itemBackground="@drawable/bg_edit_text"
            app:OtpHideLineWhenFilled="false"
            app:OtpItemCount="6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/resend_code_in"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_resend_code_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semi_bold"
                android:padding="2dp"
                android:text="0"
                android:textColor="@color/green_500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_click_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/click_here"
                android:textColor="@color/grey_b"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <EditText
            android:id="@+id/tv_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginVertical="36dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>