<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authen.LoginFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:fontFamily="@font/urbanist_regular"
            android:hint=" Username"
            android:singleLine="true"
            android:text="meetran2101" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_lock"
            android:fontFamily="@font/urbanist_regular"
            android:hint=" Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="Ahihi123@" />

        <CheckBox
            android:id="@+id/checkbox_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_password"
            android:button="@null"
            android:checked="false"
            android:scaleX="0.60"
            android:scaleY="0.60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green_500"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semi_bold"
            android:text="@string/remember_me"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/urbanist_semi_bold"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_semi_bold"
        android:gravity="center"
        android:text="@string/forgot_the_password"
        android:textColor="@color/green_300"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/urbanist_regular"
            android:gravity="center"
            android:text="@string/do_not_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/urbanist_semi_bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/green_300"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>