<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authen.NewPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="6dp"
            android:text="@string/create_new_password"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:layout_gravity="center"
        android:src="@drawable/complete" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/urbanist_semi_bold"
        android:text="@string/create_new_password"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp" />

        <EditText
            android:id="@+id/edt_new_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/grey" />

        <ImageView
            android:id="@+id/ic_show_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp" />

        <EditText
            android:id="@+id/edt_retype_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/grey" />

        <ImageView
            android:id="@+id/ic_show_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/tv_continue_change"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/continuee"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>